kubernetes/services/bazarr.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 6767
  selector:
    app: bazarr

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: default
spec:
  tls:
    - hosts:
        - bazarr.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: bazarr.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: default
  labels:
    app: bazarr
  annotations:
    reloader.stakater.com/auto: "true"
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: lscr.io/linuxserver/bazarr:latest
          livenessProbe:
            httpGet:
              path: /ping
              port: 6767
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 1000m
          ports:
            - name: web
              containerPort: 6767
          volumeMounts:
            - name: scripts
              mountPath: /custom-cont-init.d/create-config.sh
              subPath: create-config.sh
            - name: multimedia
              mountPath: /jellyfin
      volumes:
        - name: scripts
          configMap:
            name: bazarr-scripts
            defaultMode: 0744
        - name: multimedia
          hostPath:
            path: /storage/Multimedia
